--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,38 @@
 body {
-    color: blue;
+  color: blue;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: rgb(227, 255, 255);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: stretch;
+  padding: 0;
+  margin: 0;
+}
+.header {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: aquamarine;
+  margin: 0px;
+  width: 100%;
+}
+.content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 50px;
+  padding-top: 100px;
+
+  img {
+    justify-self: end;
+  }
+  div {
+    align-self: center;
+  }
+}
+
+.hidden {
+  display: none;
 }
